--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,30 @@
     <title>Layout</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Site de testes sobre layout usando Flex!</h1>
+    </header>
+    <main>
+        <div class="mainContainer">
+            <div class="bigBox">
+                <div>
+                    <div class="miniBox"><p>1</p></div>
+                </div>
+                <div>
+                    <div class="flex">
+                        <div class="miniBox"><p>2</p></div>
+                        <div class="miniBox"><p>3</p></div>
+                    </div>
+                    <div>
+                        <div class="miniBox"><p>4</p></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
