--- a/index.html
+++ b/index.html
@@ -11,23 +11,47 @@
         <h1>Site de testes sobre layout usando Flex!</h1>
     </header>
     <main>
-        <div class="mainContainer">
-            <div class="bigBox">
+        <div class="azul">
+            <div class="amarelo"></div>
+            <div class="flex">
                 <div>
-                    <div class="miniBox"><p>1</p></div>
+                    <div class="amarelo"></div>
+                    <div class="amarelo"></div>
                 </div>
-                <div>
-                    <div class="flex">
-                        <div class="miniBox"><p>2</p></div>
-                        <div class="miniBox"><p>3</p></div>
-                    </div>
-                    <div>
-                        <div class="miniBox"><p>4</p></div>
-                    </div>
+                <div class="amarelo"></div>
+            </div>
+        </div>
 
+        <div class="azul">
+            <div class="flex">
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+            </div>
+            <div class="amarelo"></div>
+            <div class="flex">
+                <div class="amarelo extender"></div>
+                <div class="amarelo"></div>
+            </div>
+        </div>
+
+        <div class="azul">
+            <div class="flex">
+                <div class="amarelo"></div>
+                <div>
+                    <div class="amarelo"></div>
+                    <div class="flex">
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="azul">
+            
+        </div>
+
     </main>
     <footer>
 
