add - criei um layout

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div>
                     <div class="amarelo"></div>
                     <div class="flex">
-                        <div class="amarelo"></div>
+                        <div class="amarelo extenderDown"></div>
                         <div class="amarelo"></div>
                     </div>
                 </div>
