change - mudei o css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <div class="amarelo"></div>
             <div class="flex">
                 <div>
-                    <div class="amarelo"></div>
+                    <div class="flex">
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
                     <div class="amarelo"></div>
                 </div>
                 <div class="amarelo"></div>
