--- a/index.html
+++ b/index.html
@@ -40,19 +40,28 @@
 
         <div class="azul">
             <div class="flex">
-                <div class="amarelo"></div>
+                <div class="amarelo">1</div>
                 <div>
-                    <div class="amarelo"></div>
+                    <div class="amarelo">2</div>
                     <div class="flex">
-                        <div class="amarelo extenderDown"></div>
-                        <div class="amarelo"></div>
+                        <div class="amarelo extenderDown">3</div>
+                        <div class="amarelo">4</div>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="azul">
-            
+            <div class="flex">
+                <div class="amarelo">1</div>
+                <div>
+                    <div class="flex">
+                        <div class="amarelo">2</div>
+                    </div>
+                    <div class="amarelo">3</div>
+                </div>
+                <div class="amarelo">4</div>
+            </div>
         </div>
 
     </main>
