--- a/index.html
+++ b/index.html
@@ -1,72 +1,262 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Layout</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Site de testes sobre layout usando Flex!</h1>
+      <h1>Site de testes sobre layout usando Flex!</h1>
     </header>
     <main>
+      <div class="mainContainer">
         <div class="azul">
+          <div class="amarelo"></div>
+          <div class="flex">
+            <div>
+              <div class="flex">
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+              </div>
+              <div class="amarelo"></div>
+            </div>
             <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+          </div>
+          <div class="amarelo"></div>
+          <div class="flex">
+            <div class="amarelo extender"></div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div>
+              <div class="amarelo"></div>
+              <div class="flex">
+                <div class="amarelo extenderDown"></div>
+                <div class="amarelo"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div>
+              <div class="flex">
+                <div class="amarelo"></div>
+              </div>
+              <div class="amarelo extenderFurtherDown"></div>
+            </div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div>
+              <div class="flex">
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+              </div>
+              <div class="amarelo extenderDown"></div>
+            </div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+          </div>
+          <div class="amarelo"></div>
+          <div class="flex">
+            <div class="amarelo extender"></div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul notready">
+          <div class="flex">
+            <div>
+              <div class="amarelo"></div>
+            </div>
+            <div class="amarelo extenderLittleDown"></div>
+            <div class="amarelo"></div>
+          </div>
+          <div class="amarelo "></div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+          </div>
+          <div class="flex">
+            <div class="amarelo extenderLittleDown"></div>
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="amarelo"></div>
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div>
+              <div class="amarelo"></div>
+              <div class="amarelo"></div>
+            </div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="amarelo"></div>
+          <div class="flex">
+            <div>
+              <div class="amarelo"></div>
+              <div class="flex">
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+              </div>
+            </div>
+            <div class="amarelo"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div>
+              <div class="amarelo extenderPlus"></div>
+              <div class="amarelo extenderPlus"></div>
+            </div>
+            <div class="amarelo pulltoright"></div>
+          </div>
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo extender"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div>
+              <div class="amarelo extenderPlus"></div>
+              <div class="amarelo extenderPlus"></div>
+            </div>
+            <div class="amarelo pulltoright"></div>
+          </div>
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo extender"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div>
+              <div class="amarelo"></div>
+              <div class="flex">
+                <div class="amarelo"></div>
+                <div class="amarelo"></div>
+              </div>
+              <div class="amarelo"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo extender"></div>
+          </div>
+          <div class="flex">
+            <div class="amarelo extender"></div>
+            <div class="amarelo"></div>
+          </div>
+          <div class="amarelo"></div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo extender"></div>
+          </div>
+          <div class="flex">
+            <div>
+              <div class="amarelo extenderPlus"></div>
+              <div class="amarelo extenderPlus"></div>
+            </div>
+            <div class="amarelo pulltoright"></div>
+          </div>
+        </div>
+
+        <div class="azul">
+          <div class="flex">
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+            <div class="amarelo"></div>
+          </div>
+          <div class="flex">
+            <div>
+              <div class="amarelo extenderPlus"></div>
+              <div class="amarelo extenderPlus"></div>
+            </div>
+            <div class="amarelo pulltoright"></div>
+          </div>
+        </div>
+
+        <div class="azul notready">
             <div class="flex">
+                <div class="amarelo"></div>
                 <div>
-                    <div class="flex">
-                        <div class="amarelo"></div>
-                        <div class="amarelo"></div>
-                    </div>
+                    <div class="amarelo"></div>
                     <div class="amarelo"></div>
                 </div>
-                <div class="amarelo"></div>
+                
+                <div>
+                    <div class="amarelo"></div>
+                    <div class="amarelo"></div>
+                </div>
+                
             </div>
+            <div class="amarelo extender"></div>
         </div>
 
         <div class="azul">
-            <div class="flex">
-                <div class="amarelo"></div>
-                <div class="amarelo"></div>
-                <div class="amarelo"></div>
-            </div>
+          <div class="flex">
             <div class="amarelo"></div>
-            <div class="flex">
-                <div class="amarelo extender"></div>
-                <div class="amarelo"></div>
+            <div>
+              <div class="amarelo"></div>
+              <div class="amarelo extenderMinusPlus"></div>
             </div>
-        </div>
-
-        <div class="azul">
-            <div class="flex">
-                <div class="amarelo">1</div>
-                <div>
-                    <div class="amarelo">2</div>
-                    <div class="flex">
-                        <div class="amarelo extenderDown">3</div>
-                        <div class="amarelo">4</div>
-                    </div>
-                </div>
+            <div>
+              <div class="amarelo"></div>
             </div>
+          </div>
+          <div class="flex">
+            <div class="amarelo extender"></div>
+            <div class="amarelo"></div>
+          </div>
         </div>
-
-        <div class="azul">
-            <div class="flex">
-                <div class="amarelo">1</div>
-                <div>
-                    <div class="flex">
-                        <div class="amarelo">2</div>
-                    </div>
-                    <div class="amarelo">3</div>
-                </div>
-                <div class="amarelo">4</div>
-            </div>
-        </div>
-
+      </div>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
