add - layouts aleatorios

--- a/index.html
+++ b/index.html
@@ -304,6 +304,84 @@
             </div>
             <h1>18</h1>
 
+
+        </div>
+
+        <h1>Layouts aleatórios (não foram pedidos)</h1>
+
+        <div class="mainContainer">
+
+            <div class="azul">
+                <div class="flex">
+                    <div>
+                        <div class="amarelo"></div>
+                        <div class="flex">
+                            <div class="amarelo"></div>
+                            <div>
+                                <div class="amarelo"></div>
+                                <div class="amarelo"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="amarelo"></div>
+                </div>
+            </div>
+
+            <div class="azul">
+                <div class="flex">
+                    <div>
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
+                    <div class="amarelo"></div>
+                    <div class="amarelo"></div>
+                </div>
+            </div>
+
+            <div class="azul">
+                <div class="amarelo"></div>
+                <div class="flex">
+                    <div class="amarelo"></div>
+                    <div>
+
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
+                    <div>
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="azul">
+                <div class="flex">
+                    <div>
+
+                        <div class="amarelo"></div>
+                        <div class="amarelo"></div>
+                    </div>
+                    <div class="amarelo"></div>
+                    <div class="amarelo"></div>
+                </div>
+                <div class="amarelo"></div>
+            </div>
+
+            <div class="azul">
+                <div class="flex">
+                    <div class="amarelo"></div>
+                    <div>
+                        <div class="amarelo"></div>
+                        <div class="flex">
+                            <div class="amarelo"></div>
+                            <div class="amarelo"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="amarelo"></div>
+            </div>
+
         </div>
     </main>
     <footer></footer>
